added onpage links, linked stylesheet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
 
@@ -43,5 +44,35 @@
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
+
+    <!-- Divider -->
+    <div class="divider">
+      <h3>Designed in New York</h3>
+    </div>
+
+    <!-- Portfolio -->
+    <div class="portfolio">
+      <h3>Portfolio</h3>
+      <p>Coming soon</p>
+    </div>
+
+    <!-- Team -->
+    <div class="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+
+    <!-- Contact-->
+    <div class="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; Broadway 2016 <a href="#">Home</a> <a href="#">Process</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+    </footer>
   </body>
 </html>
