--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <!-- Navigation -->
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#process">About</a></li>
+        <li><a href="#portfolio">Work</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
     <!-- Indentify -->
-    <div class="Identify">
-      <h2>The Process</h2>
+    <div class="identify">
+      <h2 id="process">The Process</h2>
       <img src="./resources/images/identify.svg" alt="Swirly Arrow/Identify Logo">
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
@@ -51,19 +51,19 @@
     </div>
 
     <!-- Portfolio -->
-    <div class="portfolio">
+    <div id="portfolio">
       <h3>Portfolio</h3>
       <p>Coming soon</p>
     </div>
 
     <!-- Team -->
-    <div class="team">
+    <div id="team">
       <h3>Team</h3>
       <p>We're Hiring!</p>
     </div>
 
     <!-- Contact-->
-    <div class="contact">
+    <div id="contact">
       <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>E-mail: test@example.com</p>
@@ -72,7 +72,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>&copy; Broadway 2016 <a href="#">Home</a> <a href="#">Process</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+      <p>&copy; Broadway 2016 <a href="./index.html">Home</a> <a href="#process">About</a> <a href="#portfolio">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
     </footer>
   </body>
 </html>
